<resources>
    <string name="app_name">ibrahim.kondo.bumaye_app</string>
    <string name="client_details">Détails du client</string>
    <string name="identity">Informations personnelles</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="measures">Mensurations</string>
    <string name="shoulder">Épaule</string>
    <string name="chest">Poitrine</string>
    <string name="length_waist">Longueur taille</string>
    <string name="ventral_turn">Tour de ventre</string>
    <string name="hip">Hanche</string>
    <string name="bodice_length">Longueur du corsage</string>
    <string name="belt">Ceinture</string>
    <string name="skirt_length">Longueur de jupe</string>
    <string name="dress_length">Longueur de robe</string>
    <string name="sleeve_length">Longueur de manche</string>
    <string name="sleeve_size">Tour de manche</string>
    <string name="pants_length">Longueur de pantalon</string>
    <string name="short_dress_length">Longueur de robe courte</string>
    <string name="thigh_circumference">Tour de cuisse</string>
    <string name="knee_length">Longueur du genou</string>
    <string name="knee_circumference">Tour du genou</string>
    <string name="bottom">Bas</string>
    <string name="other_measures">Autres mensurations</string>
    <string name="order_tracking">Suivi de commande</string>
    <string name="order_date">Date de commande</string>
    <string name="delivery_date">Date de livraison</string>
    <string name="payment">Paiement</string>
    <string name="total_amount">Montant total</string>
    <string name="advance">Avance</string>
    <string name="remainder">Reste à payer</string>
    <string name="bumaye_app">Bumaye App</string>
    <string name="description">L\'application de couture qui vous permet de prendre des mesures de vos clients avec une option de paiement fictif.</string>
    <string name="question">Bienvenue, Que désirez vous ?</string>
    <string name="add_client">Ajouter client</string>
    <string name="view_client">Liste des clients</string>
    <string name="date">Août 2025</string>
    <string name="me">[_I_B_M_]</string>
    <string name="logo">B</string>
    <string name="add">+</string>
    <string name="clients_list">Liste des clients</string>
    <string name="search_placeholder">Rechercher un client...</string>
    <string name="nothing">-</string>
    <string name="order_date_value">Date commande</string>
    <string name="delivered_date_value">Date livraison</string>
    <string name="delivered_date_label">Date livraison</string>
    <string name="order_date_label">Date commande</string>
    <string name="paid">payé :</string>
    <string name="paid_value">Total</string>
    <string name="remainder_value">Restant</string>
    <string name="phone_img">phone</string>
    <string name="man_head">man head</string>
    <string name="delete">Supprimer</string>
    <string name="update">Mettre à jour</string>
    <string name="back">Retour</string>
    <string name="logo_text">B</string>
    <string name="add_new_client">Ajouter un nouveau client</string>
    <string name="client_information">Informations du client</string>
    <string name="first_name_hint">Prénom *</string>
    <string name="last_name_hint">Nom *</string>
    <string name="phone_number_hint">Numéro de téléphone *</string>
    <string name="measurements_title">Mesures</string>
    <string name="shoulder_hint">Épaule (cm)</string>
    <string name="chest_hint">Poitrine (cm)</string>
    <string name="waist_length_hint">Longueur taille (cm)</string>
    <string name="ventral_turn_hint">Tour ventral (cm)</string>
    <string name="hip_hint">Hanche (cm)</string>
    <string name="bodice_length_hint">Longueur buste (cm)</string>
    <string name="belt_hint">Ceinture (cm)</string>
    <string name="skirt_length_hint">Longueur jupe (cm)</string>
    <string name="dress_length_hint">Longueur robe (cm)</string>
    <string name="sleeve_length_hint">Longueur manche (cm)</string>
    <string name="sleeve_size_hint">Taille manche (cm)</string>
    <string name="pants_length_hint">Longueur pantalon (cm)</string>
    <string name="short_dress_length_hint">Longueur robe courte (cm)</string>
    <string name="thigh_circumference_hint">Tour cuisse (cm)</string>
    <string name="knee_length_hint">Longueur genou (cm)</string>
    <string name="knee_circumference_hint">Tour genou (cm)</string>
    <string name="bottom_hint">Bas (cm)</string>
    <string name="other_measures_hint">Autres mesures (cm)</string>
    <string name="order_title">Commande</string>
    <string name="order_date_hint">Date de commande (JJ/MM/AAAA) *</string>
    <string name="delivery_date_hint">Date de livraison (JJ/MM/AAAA) *</string>
    <string name="payment_title">Paiement</string>
    <string name="total_amount_hint">Montant total *</string>
    <string name="advance_hint">Avance *</string>
    <string name="remainder_hint">Reste</string>
    <string name="add_client_button">Ajouter le client</string>
    <string name="update_client_title">Mettre à jour le client</string>
    <string name="update_client_button">Mettre à jour le client</string>

    <!-- Chaînes pour l'item de liste client -->
    <string name="sample_name">Nom Prénom</string>
    <string name="phone_label">Téléphone</string>
    <string name="sample_order_date">Date commande : 01/01/2025</string>
    <string name="sample_delivery_date">Date livraison : 05/01/2025</string>
    <string name="sample_paid_amount">Payé : 100000 CFA</string>
    <string name="sample_total_amount">Total : 100000 CFA</string>
    <string name="required_advices">Les champs avec (*) sont requis</string>
    <string name="remainder_label">Reste :</string>
</resources>