<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/black"
                    android:background="@drawable/round_button"
                    android:text="@string/logo_text"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:elevation="4dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/bumaye_app"
                    android:layout_marginEnd="5dp"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:elevation="4dp" />
            </LinearLayout>
            <View android:layout_marginTop="8dp" android:background="#31FFFFFF" android:layout_width="200dp"  android:layout_height="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_client_title"
                android:textSize="16sp"
                android:textColor="?attr/colorOnBackground"
                android:gravity="center"
                android:elevation="4dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_top"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:gravity="center">
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="7dp"
                    android:background="@drawable/radius_black"
                    android:gravity="center" />
            </LinearLayout>
            <!-- ==== Titre ==== -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_information"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="12dp" />

            <!-- ==== Infos Client ==== -->
            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp"
                android:hint="@string/first_name_hint" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp"
                android:hint="@string/last_name_hint" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp"
                android:inputType="phone" />

            <!-- ==== Mesures ==== -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurements_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <EditText android:id="@+id/etShoulder"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/shoulder_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etChest"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/chest_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etLengthWaist"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/waist_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etVentralTurn"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/ventral_turn_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etHip"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hip_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etBodiceLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/bodice_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etBelt"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/belt_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etSkirtLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/skirt_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etDressLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/dress_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etSleeveLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/sleeve_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etSleeveSize"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/sleeve_size_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etPantsLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/pants_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etShortDressLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/short_dress_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etThighCircumference"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/thigh_circumference_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etKneeLength"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/knee_length_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etKneeCircumference"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/knee_circumference_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etBottom"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/bottom_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etOtherMeasures"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/other_measures_hint" android:inputType="numberDecimal" />

            <!-- ==== Commande ==== -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/etOrderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_date_hint"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none" />

            <EditText
                android:id="@+id/etDeliveryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp"
                android:hint="@string/delivery_date_hint"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none" />

            <!-- ==== Paiement ==== -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <EditText android:id="@+id/etTotalAmount"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/total_amount_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etAdvance"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/advance_hint" android:inputType="numberDecimal" />
            <EditText android:id="@+id/etRemainder"                 android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_editext"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remainder_hint"
                android:inputType="numberDecimal"
                android:textColor="@color/spotify_green"
                android:textColorHint="@color/spotify_green"
                android:focusable="false"
                android:cursorVisible="false"/>

            <!-- Bouton de sauvegarde -->
            <Button
                android:id="@+id/btnSaveClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_client_button"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_primary_button"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>